web/themes/custom/union_marketing/scss/components/_fields.scss
.field--label-inline {
  display: flex;
  gap: .5em;
}

.field--label-inline .field__label {
  font-weight: 400;

  &::after {
    content: ':'
  }
}

.field--label-inline p.address {
  margin: 0;
}

.node--course.node--view-mode-teaser .field {
  margin-bottom: 0;
  line-height: 1;
}

.course-notification-course-ref {
  display: none !important; // This is filled in via JS.
}

.field--field-course-number {
  display: flex;
  font-weight: 100;
  margin-bottom: 1.25em;
}

.field--field-course-number > div {
  margin-right: .25em;
}

.node--course .cu-banner--page .cu-heading {
  --cu-component-margin-bottom: .25em;
}

// Red links in the page banner are no good.
.cu-banner--page .field--body {
  --cu-current-link-color: white;
}

.cu-card .field--field-published-date {
  margin: var(--cu-vr-1) 0;
  font-size: var(--cu-ms-1);
  color: #777;
}

.cu-component--rich-text iframe {
  border: 0;
}

.cu-person__name,
.cu-person__name .persona__name {
  margin: 0;

  a {
    --cu-current-link-color: $black;
    text-decoration: none;
  }
}

.field--field-bio {
  .links.inline {
    padding: 0;
    list-style-type: none;
  }
}

.cu-grid--3col.cu-component--people-listing {
  @include breakpoint(sm) {
    grid-template-columns: repeat(2, 50%);

    .field--field-email {
      overflow-wrap: break-word;
      hyphens: auto;
    }
  }

  @include breakpoint(md) {
    grid-template-columns: repeat(3, 33.33%);
  }
}

.cu-person__title {
  --cu-current-font-size: var(--cu-ms-1);
  --cu-current-line-height: 1.2;
}

.cu-testimonial__name .field {
  display: inline;
}

